[gd_scene load_steps=5 format=3 uid="uid://u8nu6xg2lxws"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_krgiq"]
[ext_resource type="Theme" uid="uid://b588ktng63i4k" path="res://theme/theme_button.tres" id="1_moh8y"]

[sub_resource type="InputEventAction" id="InputEventAction_g2rpl"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_npqd5"]
events = [SubResource("InputEventAction_g2rpl")]

[node name="pause_menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_krgiq")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1277.0
offset_bottom = 724.0
color = Color(0, 0, 0, 0.294118)

[node name="menu_screen" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -22.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2

[node name="Resume_button" type="Button" parent="menu_screen"]
layout_mode = 2
theme = ExtResource("1_moh8y")
shortcut = SubResource("Shortcut_npqd5")
text = "RESUME"

[node name="Back_Menu_button" type="Button" parent="menu_screen"]
layout_mode = 2
theme = ExtResource("1_moh8y")
text = "BACK TO MENU SCREEN"

[connection signal="pressed" from="menu_screen/Resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="menu_screen/Back_Menu_button" to="." method="_on_back_menu_button_pressed"]
